feat: add data attributes

--- a/src/components/VacancyCard/VacancyCard.module.scss
+++ b/src/components/VacancyCard/VacancyCard.module.scss
@@ -18,7 +18,9 @@
       cursor: pointer;
     }
 
-    div {
+    button {
+      border: none;
+      background: none;
       cursor: pointer;
     }
   }
